# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import personnelRouter from "./personnel";
 import dutyPointsRouter from "./duty-points";
 import rosterRouter from "./roster";
 import leaveRouter from "./leave";
+import biometricRouter from "./biometric";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(personnelRouter);
 router.use(dutyPointsRouter);
 router.use(rosterRouter);
 router.use(leaveRouter);
+router.use(biometricRouter);
 
 export default router;
